[package]
name = "tuistash"
description = "A Terminal User Interface for Logstash"
homepage = "https://github.com/edmocosta/tuistash"
repository = "https://github.com/edmocosta/tuistash"
documentation = "https://github.com/edmocosta/tuistash"
keywords = ["logstash", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
authors = ["Edmo Vamerlatti Costa <edinhow@gmail.com>"]
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.21", features = ["std", "derive", "help", "usage", "suggestions"], default-features = false }
ureq = { version = "2.9.1", features = ["json", "tls"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_with = { version = "3.2.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
tabled = { version = "0.14.0", features = ["std","default"] }
colored = { version = "2.0.4", default-features = false }
json_to_table = { version = "0.5.0", default-features = false }
base64 = { version = "0.22.0", features = ["std"], default-features = false }
rustls = { version = "0.21", features = ["dangerous_configuration"], default-features = false }
colored_json = { version = "5.0", default-features = false }
humansize = { version = "2.1", default-features = false }
humantime = { version = "2.1" }
ratatui = { version = "0.26", features = ["crossterm", "unstable-rendered-line-info"] }
crossterm = { version = "0.27.0", default-features = false, features = ["event-stream"] }
num-format = { version = "0.4", default-features = false, features = ["with-num-bigint"] }
human_format = { version = "1.1" }
uuid = { version = "1.4", features = ["v4"] }
time = { version = "0.3", features = ["default", "formatting", "local-offset"] }

[[bin]]
name = "tuistash"
path = "src/cli/main.rs"