[package]
name = "tuistash"
description = "A Terminal User Interface for Logstash"
homepage = "https://github.com/edmocosta/tuistash"
repository = "https://github.com/edmocosta/tuistash"
documentation = "https://github.com/edmocosta/tuistash"
keywords = ["logstash", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
authors = ["Edmo Vamerlatti Costa <edinhow@gmail.com>"]
version = "0.7.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["std", "derive", "help", "usage", "suggestions"], default-features = false }
ureq = { version = "2.9.7", features = ["json", "tls"], default-features = false }
serde = { version = "1.0.217", features = ["derive"], default-features = false }
serde_json = { version = "1.0.135", default-features = false }
base64 = { version = "0.22.1", features = ["std"], default-features = false }
rustls = { version = "0.23.5", default-features = false }
colored_json = { version = "5.0", default-features = false }
humansize = { version = "2.1", default-features = false }
humantime = { version = "2.1" }
ratatui = { version = "0.29.0", features = ["crossterm", "unstable-rendered-line-info"] }
crossterm = { version = "0.28.1", default-features = false, features = ["event-stream"] }
human_format = { version = "1.1" }
uuid = { version = "1.10.0", features = ["v4"] }
time = { version = "0.3.36", features = ["default", "formatting", "local-offset", "parsing"] }
regex = { version = "1.11.0", features = [] }

[[bin]]
name = "tuistash"
path = "src/cli/main.rs"